--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ h11==0.14.0
 idna==3.4
 outcome==1.2.0
 pymongo==4.3.3
+python-dotenv==0.21.0
 PySocks==1.7.1
 requests==2.28.2
 selenium==4.8.2
@@ -17,3 +18,4 @@ trio==0.22.0
 trio-websocket==0.9.2
 urllib3==1.26.14
 wsproto==1.2.0
+pydantic~=1.10.6
